<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/padding_15"
    tools:context=".views.general.SignUpFragment"
    tools:ignore="HardcodedText">

    <ImageView
        android:id="@+id/account_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_15"
        android:background="@drawable/ic_app_name"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/padding_20">

        <TextView
            style="@style/TextFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5"
            android:text="Username:"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18" />

        <com.example.gourmetcompass.utils.EditTextUtil
            android:id="@+id/username_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5"
            android:text="Email:"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18" />

        <com.example.gourmetcompass.utils.EditTextUtil
            android:id="@+id/email_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5"
            android:text="Password:"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18" />

        <com.example.gourmetcompass.utils.EditTextUtil
            android:id="@+id/password_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/TextFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_5"
            android:text="Confirm password:"
            android:textColor="@color/black"
            android:textSize="@dimen/text_18" />

        <com.example.gourmetcompass.utils.EditTextUtil
            android:id="@+id/cf_password_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_up_mid"
        style="@style/TitleFont"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_20"
        android:background="@drawable/btn_orange"
        android:elevation="5dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_20" />

    <TextView
        style="@style/TitleFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/margin_15"
        android:layout_marginEnd="@dimen/margin_30"
        android:text="Already have an account?"
        android:textColor="@color/input_text_border"
        android:textSize="@dimen/text_16" />

    <Button
        android:id="@+id/btn_log_in_bot"
        style="@style/TitleFont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="30dp"
        android:background="@android:color/transparent"
        android:text="@string/log_in"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_20" />

</LinearLayout>