<resources>
    <string name="app_name">Gourmet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="detail_btn">Detail</string>
    <string name="menu_btn">Menu</string>
    <string name="gallery_btn">Gallery</string>
    <string name="review_btn">Review</string>
    <string name="desc_title">Description</string>
    <string name="address_title">Address</string>
    <string name="phone_title">Phone Number</string>
    <string name="open_hr_title">Opening Hours</string>
...
    <string name="dish_ava">Dish avatar</string>
    <string name="icon">Icon</string>
    <string name="react_count">(%1$d)</string>
    <string name="rating_count">(%1$d)</string>
    <string name="item_ratings">%.1f</string>
    <string name="ratings">%1$s</string>
    <string name="add_to_collection">Add to collection</string>
    <string name="add_a_review">Add a review</string>
    <string name="rate_this_dish">Rate this dish</string>
    <string name="create_new_coll">Create a new collection</string>
    <string name="my_collection">My collection #%1$d</string>
    <string name="submit">Submit</string>
    <string name="new_collection">New collection</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="upload">Upload</string>
    <string name="rate_this_restaurant">Rate this restaurant</string>
    <string name="favorites_restaurants">Favorites Restaurants</string>
    <string name="reply_review">Replying to %1$s</string>
    <string name="description">Description</string>
...
    <string name="older_wiser">The older, the wiser</string>
    <string name="top_reviewed">Top reviewed</string>
    <string name="home">Home</string>
    <string name="browse">Browse</string>
    <string name="map">Map</string>
    <string name="notification">Notification</string>
    <string name="account">Account</string>
    <string name="gourmet_s_choice">Gourmet\'s choice</string>
    <string name="search">Search</string>
    <string name="go_to_search_view">Go to search view</string>
    <string name="recent_searches">Recent searches</string>
    <string name="popular_searches">Popular searches</string>
    <string name="recommended">Recommended</string>
...
    <string name="restaurant_description">Description</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="account_ava">Account ava</string>
    <string name="type">Type</string>
    <string name="n_results">%1$d results</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="user_avatar">User avatar</string>
    <string name="take_photo">Take Photo</string>
    <string name="photo_library">Photo Library</string>
    <string name="edit_avatar">Edit avatar</string>
    <string name="empty">Empty</string>
    <string name="add_your_first_collection">Add your first collection!</string>
...
