<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_sheet_exist_coll_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet"
    android:orientation="vertical"
    android:paddingTop="@dimen/padding_20">

    <View
        android:layout_width="50dp"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:background="@drawable/ic_drag_handle" />

    <Button
        android:id="@+id/btms_exist_btn_add_new"
        style="@style/TitleFont"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_marginBottom="@dimen/margin_30"
        android:background="@drawable/btn_orange"
        android:elevation="5dp"
        android:text="@string/new_collection"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_18" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/btms_exist_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_15"
        android:layout_marginBottom="@dimen/margin_10" />

    <Button
        android:id="@+id/btms_exist_btn_done"
        style="@style/TitleFont"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_40"
        android:layout_marginBottom="@dimen/margin_30"
        android:background="@drawable/btn_orange"
        android:elevation="5dp"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_18" />

</LinearLayout>
